--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ p {
     font-size: 1.25rem;
     line-height: 2rem;
     font-family: serif;
+    
 }
 
 .avatar {
@@ -68,8 +69,8 @@ p {
    
 }
 
-img ~ p{
-    margin-top:50p;
+img+p{
+    margin-top: 50px;;
 }
 
 a {
@@ -151,7 +152,7 @@ h3{
 
 
 .table-example{
-    border: 5px red solid;
+    border: 5px rgb(255, 217, 0) solid;
     border-collapse: collapse;
 }
 
@@ -177,6 +178,15 @@ p:lang(en) {
     color:brown;
   }
 
+.table-example th{
+    background-color: green;
+}
+
+.table-example #krep{
+    font-style: italic;
+    background-color: #c396fd;
+}
+
 .table-example td:nth-child(3){
     color: blue;
     font-weight: bold;
@@ -188,6 +198,10 @@ p:lang(en) {
 
 .table-exampletr:nth-child(odd) td{
     border-bottom: 1px solid blue;
+}
+
+.table-exampletr:nth-child(1) td{
+    border-bottom: 15px solid rgb(3, 252, 24);
 }
 
 #form-example{
@@ -232,8 +246,10 @@ p:lang(en) {
     background-color: lavenderblush;
 }
 
-#contact-form input[type="text"]{
-    height: 20px;
+#contact-form input[type="text"],
+#contact-form input[type="data"],
+#contact-form select{
+    height: 30px;
     width: 250px;
     padding: 5px;
     margin-bottom: 10px;
